--- a/index.html
+++ b/index.html
@@ -438,9 +438,7 @@
                     
                     <div class="apartment-info">
                         <strong>Korter Majaka tn 54-9</strong><br>
-                        Kogupind ${formatNumber(TOTAL_AREA)} m² | 
-                        Korter 1: ${formatNumber(KORTER1_AREA)} m² (${formatNumber(KORTER1_INDEX * 100, 1)}%) | 
-                        Korter 2: ${formatNumber(KORTER2_AREA)} m² (${formatNumber(KORTER2_INDEX * 100, 1)}%)
+                        Kogupind ${formatNumber(TOTAL_AREA)} m²
                     </div>
                     
                     <table class="invoice-table">
