--- a/index.html
+++ b/index.html
@@ -620,4 +620,13 @@
                     
                     <div style="margin-top: 30px; font-size: 12px; color: #666; text-align: center;">
                         <div>Kasutame www.korto.ee veebitarkvara</div>
-                        <div
+                        <div>Powered by TCPDF (www.tcpdf.org)</div>
+                    </div>
+                </div>
+            `;
+
+            document.getElementById('invoiceContainer').innerHTML = invoice;
+        }
+    </script>
+</body>
+</html>
