--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
             const printWindow = window.open('', '_blank');
             
             // Get the generated invoice HTML
-            const invoiceContainer = document.getElementById('invoice-container');
+            const invoiceContainer = document.getElementById('invoiceContainer');
             if (!invoiceContainer || !invoiceContainer.innerHTML.trim()) {
                 alert('Please generate an invoice first!');
                 return;
